# Eclevive_robot

./: .claudeignore  .gitignore  BRINGUP_ZED2I_NVBLOX.md  BRINGUP_ZED_GOAL_PUBLISHER_UPDATE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CLAUDE.md.backup  LICENSE  NVBLOX_NAV2_MAP_INTEGRATION.md  README.md  ROS2_launch集.txt  TF_FRAME_UNIFIED.md  TIMESTAMP_SYNC_README.md  ZED2I_ISAAC_INTEGRATION.md  ZED2i_nvblox_Nav2自律ナビゲーション技術報告書_簡潔版.md  ZED_GOAL_PUBLISHER_IMPROVEMENTS.md  build_isaac_ros_complete.sh  build_isaac_ros_fixed.sh  build_isaac_ros_staged.sh  build_log.txt  frames_2025-09-27_21.42.32.gv  frames_2025-10-09_20.51.02.gv  frames_2025-10-21_07.27.06.gv  frames_2025-10-21_07.45.51.gv  frames_2025-10-28_19.35.33.gv  setup_dependencies.sh  test_nvblox_nav2_integration.sh  test_nvblox_nav2_map.sh  test_rotation_mapping.sh  test_scan_rate.sh  test_tf_integration.sh  test_timestamp_sync.sh  test_zed2i_isaac_integration.sh  test_zed2i_isaac_nvblox_bringup.sh
.claude/: README.md  settings.local.json
.claude/agents/: ros2-coordinator.md  ros2-cpp-implementer.md  ros2-diagnostician.md  ros2-orchestrator.md  ros2-system-architect.md  ros2-validator.md
.claude/commands/: ros2-build.md  ros2-diagnose.md  ros2-test-nav.md
.claude/docs/: build-system.md  system-architecture.md  tf-tree.md  topics.md  troubleshooting.md
.claude/skills/: QUICKSTART.md  README.md  TOKEN_EFFICIENCY_REPORT.md  ros2-build-helper.md  ros2-launch-wizard.md  ros2-quick-debug.md  ros2-sensor-validator.md  ros2-slam-tuner.md
isaac_ros_assets/isaac_ros_nvblox/quickstart/: metadata.yaml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: backpack_2d_localization.lua  cartographer.lua  cartographer_imu.lua  cartographer_imu1.lua  cartographer_rotation_improved.lua  cartographer_scan_only.lua  cartographer_stl.lua  ekf_fusion.yaml  emcl2_custom.param.yaml  emcl2_params.yaml  gbot_lidar_2d.lua  joy_teleop_example.yaml  mapper_params_high_accuracy.yaml  mapper_params_online_async copy.yaml  mapper_params_online_async.yaml  my_robot.lua  ps4.yaml  rplidar_cartographer.lua  slam_2d.lua  sllidar_cartographer.lua
src/bringup/config/nvblox/: README.md  nvblox_extended_range.yaml  nvblox_nav2_integration.yaml  nvblox_nav2_integration.yaml.backup_20251021_065910
src/bringup/launch/: bringup.launch copy.py  bringup.launch.py  bringup_devices.launch.py  bringup_jetson_launch.py  bringup_joy.launch.py  bringup_laser.launch.py  bringup_laser_odom_jetson_launch.py  bringup_ps5_all_launch.py  bringup_ps5_devices.launch.py  bringup_ps5_jetson_launch.py  bringup_ps5_localization_launch.py  bringup_ps5_slam_launch.py  bringup_retroidpocket5.launch.py  bringup_rp5.launch.py  cartographer.launch.py  cartographer_imu.launch.py  cartographer_laser.launch.py  cartographer_ld06.launch.py  ekf_localization_launch.py  l_bringup.launch.py  micro_ros_agent_launch.py  minicemanum_bringup_launch.py  nitros_zed2i_nvblox_fixed.launch.py  nitros_zed2i_nvblox_nav2_launch.py  online_async_launch.py  slamtoobox_lidar.launch.py  teleop_twist_launch.py  twist_mux_launch.py  zed2i_isaac_nvblox.launch.py  zed2i_isaac_nvblox.launch.py.backup_20251024_193109  zed2i_nvblox_fixed.launch.py  zed2i_nvblox_fixed.launch.py.backup2_20251021_073625  zed2i_nvblox_fixed.launch.py.backup_20251021_065853  zed2i_nvblox_fixed.launch.py.backup_20251021_184806  zed2i_nvblox_fixed.launch.py.backup_20251102_143025  zed2i_nvblox_nav2_launch.py
src/bringup/maps/: map20251011-1.pgm  map20251011-1.yaml  map20251011-2.pgm  map20251011-2.yaml
src/bringup/rviz/: bringup_mark3.rviz  bringup_rviz.rviz
src/bringup/scripts/: map_odom_tf_publisher.py  tf_sync_diagnostics.sh
src/bringup/src/: tf_sync_coordinator.cpp
src/cmd_vel_float_changer/: CMakeLists.txt  package.xml
src/cmd_vel_float_changer/src/: cmd_vel_float_changer.cpp
src/joy_mecanum_controller/: CMakeLists.txt  package.xml
src/joy_mecanum_controller/launch/: joy_mecanum_controller.launch.py
src/joy_mecanum_controller/src/: joy_mecanum_controller.cpp  joy_slam_maker.cpp
src/mark3_urdf/: CMakeLists.txt  package.xml
src/mark3_urdf/launch/: display.launch.py
src/mark3_urdf/rviz/: mecanum.rviz  zed.rviz
src/mark3_urdf/urdf/: mark3.urdf  mark3_mecanum.urdf  mechanum_zed.urdf  mechanum_zed2.urdf  mini_mechanum_robot.urdf  rover.urdf
src/odom_publisher/: CMakeLists.txt  package.xml
src/odom_publisher/src/: odom_publisher.cpp
src/safety_sensor/: CMakeLists.txt  package.xml
src/safety_sensor/src/: safety_sensor.cpp
src/zed_gesture_controller/: CMakeLists.txt  README.md  package.xml
src/zed_gesture_controller/config/: zed_gesture_controller.yaml
src/zed_gesture_controller/launch/: zed_gesture_controller.launch.py
src/zed_gesture_controller/src/: zed_gesture_controller.cpp
src/zed_goal_publisher/: CMakeLists.txt  README_hand_follower.md  package.xml
src/zed_goal_publisher/config/: zed_goal_publisher.yaml
src/zed_goal_publisher/launch/: hand_raised_person_follower_launch.py  zed_goal_publisher.launch.py
src/zed_goal_publisher/src/: hand_raised_person_follower.cpp  zed_goal_publisher.cpp  zed_goal_publisher.cpp.backup
src/zed_human_tracker/: CMakeLists.txt  package.xml
src/zed_human_tracker/src/: zed_human_tracker.cpp
src/zed_imu_republisher/: CMakeLists.txt  package.xml
src/zed_imu_republisher/src/: imu_republisher.cpp
src/zed_odom_watcher/: CMakeLists.txt  package.xml
src/zed_odom_watcher/src/: zed_odom_watcher.cpp
src/zed_zupt_wrapper/: CMakeLists.txt  README.md  package.xml
src/zed_zupt_wrapper/config/: zed_zupt_params.yaml
src/zed_zupt_wrapper/launch/: zed_zupt_filter.launch.py
src/zed_zupt_wrapper/src/: zed_zupt_filter_node.cpp
